--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,43 @@
-version: '2'
+version: "3.8"
 services:
-  server:
+  app:
     build:
-      context: ./server/
-    command: /usr/app/node_modules/.bin/nodemon src/index.js
+      context: .
+      dockerfile: ./infra/php/Dockerfile
     volumes:
-      - ./server/:/usr/app
-      - /usr/app/node_modules
-    ports:
-      - "8081:8081"
-    # env_file: ./server/.env # TODO - uncomment this to auto-load your .env file!
+      - php-fpm-socket:/var/run/php-fpm
+      - ./laravel:/var/www/html
     environment:
-      - NODE_ENV=development
-      - CHOKIDAR_USEPOLLING=true
-  client:
+      - DB_CONNECTION=mysql
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=${DB_NAME:-laravel_local}
+      - DB_USERNAME=${DB_USER:-dbuser}
+      - DB_PASSWORD=${DB_PASS:-dbpass}
+  web:
     build:
-      context: ./client/
-    command: npm start
-    volumes:
-      - ./client/:/usr/app
-      - /usr/app/node_modules
-    depends_on:
-      - server
+      context: .
+      dockerfile: ./infra/nginx/Dockerfile
     ports:
-      - "3000:3000"
+      - ${WEB_PORT:-80}:80
+    volumes:
+      - php-fpm-socket:/var/run/php-fpm
+      - ./laravel:/var/www/html
+  db:
+    build:
+      context: .
+      dockerfile: ./infra/mysql/Dockerfile
+    ports:
+      - ${DB_PORT:-3306}:3306
+    volumes:
+      - db-store:/var/lib/mysql
+      - ./export:/var/lib/mysql-files
+      - ./infra/mysql/entrypoint:/docker-entrypoint-initdb.d
+    environment:
+      - MYSQL_DATABASE=${DB_NAME:-laravel_local}
+      - MYSQL_USER=${DB_USER:-phper}
+      - MYSQL_PASSWORD=${DB_PASS:-secret}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root_password}
+volumes:
+  php-fpm-socket:
+  db-store:
